--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,11 @@
 </head>
 <body class="h-screen p-4">
     <h1 class="text-center text-3xl font-bold mb-2.5">RSA Encryption Chat</h1>
-    
+
     <main class="flex w-11/12 h-5/6 border border-black rounded-md mx-auto p-2.5">
         <div class="w-1/2 h-full flex flex-col justify-between mr-2.5">
             <div class="flex flex-col mb-2.5">
-                <label class="font-semibold">Enviar para:</label>
+                <label class="font-semibold">Send to:</label>
                 <select id="usersList" class="border border-black rounded-md p-2.5 outline-none"></select>
             </div>
 
@@ -32,17 +32,17 @@
                 <label class="font-semibold" for="publicKey">Public Key:</label>
                 <input id="publicKey" class="border border-black rounded-md p-2.5 outline-none" type="text" name="publicKey" readonly>
             </div>
-        
+
             <div class="flex flex-col">
                 <label class="font-semibold" for="privateKey">Private Key:</label>
                 <input id="privateKey" class="border border-black rounded-md p-2.5 outline-none" type="text" name="privateKey">
             </div>
-        
+
             <div class="flex flex-col flex-grow">
                 <h1 class="text-center text-xl font-bold my-2.5">Decryption RSA</h1>
-        
+
                 <textarea class="w-full h-full border border-black rounded-md p-2.5 mb-2.5 outline-none" name="encryptedMessage" id="encryptedMessage"></textarea>
-        
+
                 <button id="btnDecrypt" class="w-full bg-red-600 hover:bg-red-500 text-white font-semibold rounded-md p-2.5 outline-none" type="button">Decrypt Message</button>
             </div>
         </div>
